cmake_minimum_required(VERSION 3.8)
project(jack_in_lintcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(sqrtx sqrtx.cpp )
add_executable(search-insert-position search-insert-position.cpp)
add_executable(search-a-2d-matrix search-a-2d-matrix.cpp)
add_executable(first-position-of-target first-position-of-target.cpp)

